--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,6 @@
         android:theme="@style/Theme.Do_An_Android"
         tools:targetApi="31">
         <activity
-            android:name=".src.controller.ChartAction"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".src.controller.Home_Activity"
-            android:exported="true" />
+        <activity android:name=".src.controller.Home_Activity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
